<?xml version="1.0"?>
<package format="2">
  <name>pcd2gridmap</name>
  <version>0.0.0</version>
  <description>The pcd2gridmap package</description>
  <maintainer email="aaa@todo.todo">aaa</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
